tests/fixtures/invalid/pow_none_set_int.py
# Cannot call pow() with None, Set[int], Int
x = pow(None, {1, 2, 3}, 1)
